Fix subnav dropdown - remove overflow:hidden on parent li

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -66,6 +66,11 @@
         overflow: hidden;
     }
 
+    /* Remove overflow hidden for subnav container to allow dropdown */
+    nav > ul > li:has(.subnav) {
+        overflow: visible;
+    }
+
     nav > ul > li a {
         text-decoration: none;
     }
